# taxfilingretention

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dev/: Model Training.ipynb
saved_models/: model.joblib  preprocessor.joblib
taxfilingretention/: app.py
taxfilingretention/core/: model_training.py  preprocessing.py
taxfilingretention/models/: models.py
taxfilingretention/utils/: config.py  logger.py
