[tool.poetry]
name = "taxfilingretention"
version = "0.1.0"
description = ""
authors = ["ahsan4 <ahsanali4152@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
pandas = "^2.2.3"
scikit-learn = "1.5.2"
xgboost = "^2.1.3"
fastapi = "^0.115.8"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
